--- a/valentine_FINAL.html
+++ b/valentine_FINAL.html
@@ -303,7 +303,7 @@
             and see where you're at too. I'd love to spend Feburary 14th with you! <3
           </p>
           <p>
-            I'd love to know what you think. No pressure. Just hoping to spend a lovely day with you.
+            No pressure.
           </p>
         </div>
 
