--- a/valentine_FINAL.html
+++ b/valentine_FINAL.html
@@ -303,7 +303,7 @@
             and see where you're at too. I'd love to spend Feburary 14th with you! <3
           </p>
           <p>
-            No pressure.
+            No pressure!
           </p>
         </div>
 
