--- a/valentine_FINAL.html
+++ b/valentine_FINAL.html
@@ -294,16 +294,16 @@
         <div class="letter-detail" id="letterDetail">
           <p>Dear Nada,</p>
           <p>
-            I've loved spending time with you these past week. You've made my day brighter,
-            and I feel really at home in your company. I've realized I have feelings for you
-            that go beyond just friendship.
+            I've loved spending time with you these past weeks, you make my days brighter,
+            and I feel really at home in your company. I've started to realize my feelings for you
+            go beyond just friendship, and I wanted to be upfront about that and see where you're at too. 
           </p>
           <p>
-            With Valentine’s Day coming up, I wanted to be honest about these feelings
-            and see where you're at too. I'd love to spend Feburary 14th with you! <3
+            With Valentine’s Day coming up, I’d love to spend it with you.
+          
           </p>
           <p>
-            No pressure!
+            What do you think? <3
           </p>
         </div>
 
