--- a/valentine_FINAL.html
+++ b/valentine_FINAL.html
@@ -295,15 +295,15 @@
           <p>Dear Nada,</p>
           <p>
             I've loved spending time with you these past weeks, you make my days brighter,
-            and I feel really at home in your company. I've started to realize my feelings for you
-            go beyond just friendship, and I wanted to be upfront about that and see where you're at too. 
+            and I feel really at home in your company.  
           </p>
           <p>
-            With Valentine’s Day coming up, I’d love to spend it with you.
-          
+            I've started to realize my feelings for you
+            go beyond just friendship, and I wanted to be upfront about that and see where you're at too.
           </p>
           <p>
-            What do you think? <3
+            With Valentine’s Day coming up, I’d love to spend it with you. <3
+           
           </p>
         </div>
 
