--- a/valentine_FINAL.html
+++ b/valentine_FINAL.html
@@ -513,7 +513,7 @@
       }, 50);
 
       // Popup
-      showResponsePopup("No problem 😔");
+      showResponsePopup("🥹U are amazing & I want to remain friends ❤️‍🩹 ");
     }
 
     // "No" button 'run away' on hover for the first 3 times
